--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "uuid": "41e2309e-0da8-4708-b8bb-ebf4b45b04ae"
   },
   "engines": {
-    "node": ">=18.18.0 <=19.0.0",
+    "node": ">=18.0.0 <=20.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
